[gd_scene load_steps=9 format=3 uid="uid://iihfdnlxa4x7"]

[ext_resource type="Script" path="res://distractions/interactable/interact.gd" id="1_cp12p"]
[ext_resource type="Texture2D" uid="uid://bkji2lnbqx7du" path="res://distractions/interactable/poof.png" id="2_cfa2n"]
[ext_resource type="Texture2D" uid="uid://w7hde61qakkj" path="res://E.png" id="3_5baco"]
[ext_resource type="Texture2D" uid="uid://cbg137sipluvp" path="res://group_qs/exit.png" id="4_0unfe"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pte1w"]
radius = 0.943173

[sub_resource type="Animation" id="Animation_ad8do"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("poof_effect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0957814, 0.0957814, 0.0957814)]
}

[sub_resource type="Animation" id="Animation_ywd0h"]
resource_name = "poof"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("poof_effect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.0957814, 0.0957814, 0.0957814), Vector3(1.26076, 1.26076, 1.26076), Vector3(0.0630445, 0.0630445, 0.0630445)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yx1vc"]
_data = {
"RESET": SubResource("Animation_ad8do"),
"poof": SubResource("Animation_ywd0h")
}

[node name="interact" type="Node3D"]
script = ExtResource("1_cp12p")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_pte1w")

[node name="poof_effect" type="Sprite3D" parent="."]
transform = Transform3D(0.0957814, 0, 0, 0, 0.0957814, 0, 0, 0, 0.0957814, 0, 0, 0)
billboard = 1
texture = ExtResource("2_cfa2n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yx1vc")
}

[node name="instructions" type="Sprite3D" parent="."]
transform = Transform3D(0.149393, 0, 0, 0, 0.149393, 0, 0, 0, 0.149393, 0, 1.09312, 0)
visible = false
billboard = 1
texture = ExtResource("3_5baco")

[node name="exit" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="exit"]
layout_mode = 1
offset_right = 188.0
offset_bottom = 177.0
texture_normal = ExtResource("4_0unfe")
ignore_texture_size = true
stretch_mode = 0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_shape_entered" from="Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area3D" to="." method="_on_area_3d_area_shape_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="exit/TextureButton" to="." method="_on_texture_button_pressed"]
